implement update existing customer
