# controllers/customer.go
@@ -8,6 +8,8 @@ import (
 	"github.com/bisre1921/billing-and-invoice-system/config"
 	"github.com/bisre1921/billing-and-invoice-system/models"
 	"github.com/gin-gonic/gin"
+	"go.mongodb.org/mongo-driver/bson"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 // RegisterCustomer godoc
@@ -48,5 +50,58 @@ func RegisterCustomer(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{
 		"message": "Customer registered successfully",
 		"id":      result.InsertedID,
+	})
+}
+
+// UpdateCustomer godoc
+// @Summary Update a customer by ID
+// @Description Business Owner or Employee updates customer details
+// @Tags Customer
+// @Accept json
+// @Produce json
+// @Param id path string true "Customer ID"
+// @Param customer body models.Customer true "Updated Customer Info"
+// @Success 200 {object} models.GenericResponse
+// @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
+// @Router /customer/update/{id} [put]
+// @Security BearerAuth
+func UpdateCustomer(c *gin.Context) {
+	customerID := c.Param("id")
+	objID, err := primitive.ObjectIDFromHex(customerID)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid customer ID"})
+		return
+	}
+
+	var updatedCustomer models.Customer
+	if err := c.ShouldBindJSON(&updatedCustomer); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	update := bson.M{
+		"$set": bson.M{
+			"name":       updatedCustomer.Name,
+			"email":      updatedCustomer.Email,
+			"phone":      updatedCustomer.Phone,
+			"address":    updatedCustomer.Address,
+			"company_id": updatedCustomer.CompanyID,
+			"updated_at": time.Now(),
+		},
+	}
+
+	result, err := config.DB.Collection("customers").UpdateOne(
+		context.Background(),
+		bson.M{"_id": objID},
+		update,
+	)
+	if err != nil || result.MatchedCount == 0 {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Customer update failed"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"message": "Customer updated successfully",
 	})
 }
